<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupOptionsActivity">

    <View
        android:id="@+id/rectangle_top"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/bottom_rounded_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/playball"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
        android:textColor="#6043F5"
        app:layout_constraintBottom_toTopOf="@+id/emailSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_top"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/emailSignIn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:text="@string/email_sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/facebookSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_top"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookSignIn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/googleSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignIn" />

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/facebookSignIn"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_margin="8dp"-->
<!--        android:text="Sign in with Facebook"-->
<!--        android:backgroundTint="#1877F2"-->
<!--        android:textColor="@color/com_facebook_button_text_color"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/googleSignIn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/emailSignIn" />-->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignIn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebookSignIn" />

    <View
        android:id="@+id/rectangle_bottom"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/top_rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="#FF6043F5"
        android:text="@string/account_exists_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignIn"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>