<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".fragment.ProfileBabysitterFragment">

    <Button
        android:id="@+id/updatePrice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="@+id/priceUpdateTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceUpdateTextField" />

    <EditText
        android:id="@+id/babysitterDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDescription" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Update Price"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/priceUpdateTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceUpdateTextField" />

    <TextView
        android:id="@+id/babysitterRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:drawableStartCompat="@drawable/ic_action_star"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/babysitterName"
        app:layout_constraintTop_toBottomOf="@+id/babysitterName" />

    <TextView
        android:id="@+id/babysitterAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_address"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/babysitterName"
        app:layout_constraintTop_toBottomOf="@+id/babysitterRating" />

    <TextView
        android:id="@+id/babysitterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/placeholder_name"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="#836EF1"
        app:layout_constraintStart_toEndOf="@+id/babysitterImage"
        app:layout_constraintTop_toTopOf="@+id/babysitterImage" />

    <ImageView
        android:id="@+id/babysitterImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Profile"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Description"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/updateDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitterImage" />

    <Button
        android:id="@+id/updateDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitterImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceUpdateTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="In $"
        app:layout_constraintEnd_toStartOf="@+id/updatePrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/babysitterDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:text="35.50" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceUpdateTextField" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>